++ Gitify Watch 1.0.0-rc1
++ Released on 2015-09-30
+++++++++++++++++++++++++
- First testable release